--- a/roles/polybar/dotfiles/polybar/config.ini
+++ b/roles/polybar/dotfiles/polybar/config.ini
@@ -28,7 +28,7 @@ disabled = #707880
 [bar/bar]
 width = 100%
 height = 24pt
-radius = 6
+radius = 0
 
 ; dpi = 96
 
@@ -37,7 +37,7 @@ foreground = ${colors.foreground}
 
 line-size = 3pt
 
-border-size = 4pt
+border-size = 0pt
 border-color = #00000000
 
 padding-left = 0
@@ -51,7 +51,7 @@ separator-foreground = ${colors.disabled}
 font-0 = monospace;2
 
 modules-left = xworkspaces xwindow
-modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth date
+modules-right = pulseaudio xkeyboard memory cpu date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
