--- a/roles/i3/dotfiles/config
+++ b/roles/i3/dotfiles/config
@@ -49,7 +49,7 @@ floating_modifier $mod
 tiling_drag modifier titlebar
 
 # start a terminal
-bindsym $mod+Return exec alacritty
+bindsym $mod+Return exec kitty
 
 # kill focused window
 bindsym $mod+q kill
@@ -183,4 +183,5 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-exec_always ~/.config/polybar/launsh.sh
+exec_always --no-startup-id  ~/.config/polybar/launsh.sh &
+exec --no-startup-id feh --bg-scale ~/Pictures/wallpaper.jpg  
