--- a/roles/i3/dotfiles/config
+++ b/roles/i3/dotfiles/config
@@ -183,5 +183,5 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-exec_always --no-startup-id  ~/.config/polybar/launsh.sh &
+exec_always --no-startup-id  ~/.config/polybar/launch.sh &
 exec --no-startup-id feh --bg-scale ~/Pictures/wallpaper.jpg  
